src/objects/PSE_Employee_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>PSE_Believe_budget__c</fullName>
        <description>How strongly do you believe in an on-budget completion of the project on a scale from 1 to 5 (1=strongly believe, 5=do not believe)</description>
        <label>Believe in on-budget project completion</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Believe_success__c</fullName>
        <description>How strongly do you believe in the success of the project on a scale from 1 to 5 (1=strongly believe, 5=do not believe)</description>
        <label>Believe in success of project</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Believe_time__c</fullName>
        <description>How strongly do you believe in an on-time completion of the project on a scale from 1 to 5 (1=strongly believe, 5=do not believe)</description>
        <label>Believe in on-time project completion</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Current_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Project</label>
        <referenceTo>PSE_PulseCheck_Project__c</referenceTo>
        <relationshipLabel>Employee Feedbacks</relationshipLabel>
        <relationshipName>Employee_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSE_Feedback_for_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Feedback for Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSE_Feel_expectations_realistic__c</fullName>
        <description>Do you feel that the expectations put to you by management are realistic (1=very realistic, 5=unrealistic)</description>
        <label>Feel that expectations are realistic</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Feel_positively_challenged__c</fullName>
        <description>Do you feel positively challenged with your work (1=fully agree, 5=do not agree)</description>
        <label>Feel positively challenged</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Feel_pressure__c</fullName>
        <description>Do you feel under pressure with your work (1=high pressure, 5=low pressure)</description>
        <label>Feel under pressure</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSE_Line_Manager_EMail__c</fullName>
        <defaultValue>$User.Email</defaultValue>
        <label>Line Manager EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PSE_Line_Manager_Name__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &apos; &apos; &amp; Owner:User.Manager.LastName</formula>
        <label>Line Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_Project_Manager_EMail__c</fullName>
        <label>Project Manager EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PSE_Project_Manager_Name__c</fullName>
        <formula>PSE_Current_Project__r.PSE_Project_Manager__r.FirstName &amp; &apos; &apos; &amp; PSE_Current_Project__r.PSE_Project_Manager__r.LastName</formula>
        <label>Project Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_Rating_expectations_are_realistic__c</fullName>
        <formula>CASE( TEXT(PSE_Feel_expectations_realistic__c), 
&quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating expectations are realistic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSE_Rating_on_budget__c</fullName>
        <formula>CASE( TEXT(PSE_Believe_budget__c), 
    &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating on-budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSE_Rating_on_time__c</fullName>
        <formula>CASE( TEXT( PSE_Believe_time__c ), 
    &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating on-time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSE_Rating_positively_challenged__c</fullName>
        <formula>CASE( TEXT( PSE_Feel_positively_challenged__c ), 
&quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating positively challenged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSE_Rating_success__c</fullName>
        <formula>CASE( TEXT( PSE_Believe_success__c ), 
    &quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating success</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSE_Rating_under_pressure__c</fullName>
        <formula>CASE( TEXT(PSE_Feel_pressure__c), 
&quot;1&quot;, 1, &quot;2&quot;, 2, &quot;3&quot;, 3, &quot;4&quot;, 4, &quot;5&quot;, 5, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating under pressure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSE_Required_to_work_more_productively__c</fullName>
        <description>What areas should we improve upon to allow you to work more productively</description>
        <label>Required to work more productively</label>
        <picklist>
            <picklistValues>
                <fullName>Technical equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workspace environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager&apos;s communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team&apos;s communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work load management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PSE_Send_copy_to_line_manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send copy to line manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSE_Send_copy_to_project_manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send copy to project manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSE_Stars_on_budget__c</fullName>
        <formula>IMAGE(&quot;/img/samples/stars_&quot; &amp; TEXT(PSE_Rating_on_budget__c) &amp; &quot;00.gif&quot;,  TEXT(PSE_Believe_budget__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stars on-budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_Summary_for_Search__c</fullName>
        <formula>Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName &amp; 
IF( RecordType.DeveloperName == &apos;PSE_Employee_Feedback_Project&apos;, 
    &apos; for Project &apos; &amp;  PSE_Current_Project__r.Name,
    &apos; (Work Feedback)&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary for Search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSE_What_could_we_have_done_better__c</fullName>
        <label>What could we have done better</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSE_What_should_we_change__c</fullName>
        <label>What should we change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSE_What_went_well_this_week__c</fullName>
        <label>What went well this week</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Employee Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSE_Feedback_for_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>PSE_Current_Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{000000000}</displayFormat>
        <label>Employee Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Feedbacks</pluralLabel>
    <recordTypes>
        <fullName>PSE_Employee_Feedback_Project</fullName>
        <active>true</active>
        <description>Give feedback on specific project you have been working on this week</description>
        <label>Employee Feedback Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSE_Employee_Feedback_Work</fullName>
        <active>true</active>
        <description>Give feedback on your general work environment and conditions this week</description>
        <label>Employee Feedback Work</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>